usability fixes and overflow of code area bug fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  min-width: 300px;
 }
 
 .brand-logo{
@@ -30,12 +31,41 @@ h5{
 }
 
 #chatTextArea{
-  float: left;
   height: 120px;
   background: rgb(238, 238, 238);
   padding: 8px;
   width: 80%;
   overflow-y: scroll;
+}
+
+#microphoneIcon {
+  max-width: 100px;
+  width: 100%;
+}
+
+#dictationButton {
+  text-align: right;
+  overflow: hidden;
+  padding-right: 8px;
+  height: 120px;
+  width: 20%;
+  line-height: 120px;
+}
+
+#chatTextEntryAndMic {
+  width: 100%;
+  overflow: hidden;
+  background: rgb(238, 238, 238);
+  display: flex;
+}
+
+#interimTextDisplayLabel {
+  background: rgb(238, 238, 238);
+  padding: 4px;
+  margin: 0;
+  color: #aaaaaa;
+  font-style: italic;
+  border-bottom: 1px solid #aaaaaa;
 }
 
 #elementGeneration{
@@ -64,29 +94,4 @@ h5{
 .computerChat {
   font-weight: bold;
   color: purple;
-}
-
-#microphoneIcon {
-  float: left;
-  width: 20%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-
-}
-
-#chatTextEntryAndMic {
-  width: 100%;
-  overflow: hidden;
-  background: rgb(238, 238, 238);
-  position: relative;
-}
-
-#interimTextDisplayLabel {
-  background: rgb(238, 238, 238);
-  padding: 4px;
-  margin: 0;
-  color: #aaaaaa;
-  font-style: italic;
-  border-bottom: 1px solid #aaaaaa;
 }
